# task

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/mindfus/: dependencies.py
backend/mindfus/backend/: __init__.py  auth.py  message.py  utils.py
backend/mindfus/celery/: celery_app.py
backend/mindfus/database/: api_models.py  storage_models.py
backend/mindfus/database/alembic/: env.py
backend/mindfus/database/alembic/versions/: 000000000000_first_revision.py  29b5fe42f392_change_users_table.py  6bce88073fe6_added_account_table.py  88d710c28fa0_added_messages_table.py
docker/backend/app/: Dockerfile
docker/backend/services/alembic/: Dockerfile
docker/backend/services/celery/: Dockerfile
docker/frontend/: Dockerfile
docker/frontend/nginx/: nginx.conf
docker/postgres/: Dockerfile
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AccountInfo.tsx  AccountStatus.tsx  AuthorizationPage.tsx  MailPage.tsx  Navbar.tsx  RegistrationPage.tsx
frontend/src/modules/: account.ts  fastapi.ts  message.ts  utils.ts
frontend/src/stores/: AccountStore.ts  MessageStore.ts  RootStore.ts  index.ts
